feat: auto-topup at checkout, GPay/APay display, eSIM naming, cache fix
Auto-Topup at Checkout:
- Show AT checkbox for all bundle purchases (not just top-ups)
- Remove iccid guard from AutoTopupCheckoutOption
- Pass enable_auto_topup unconditionally in PaymentFlow
- Skip AT prompt on success screen when already enabled

Google Pay / Apple Pay Display:
- Show GPay/APay icons and branded text in PaymentMethods
- Show GPay/APay icons in SavedPaymentMethodSelector
- Add applePay.png and googlePay.png to public/images
- Skip expiry display for wallet-type payment methods

eSIM Naming:
- Display display_title/bundle_name instead of label_name in EsimCard
- Show iccid as subtitle on eSIM cards
- Add time to date format display
- Default to display_title in OrderLabelChange

Stale Cache Fix:
- Replace invalidateQueries with removeQueries in PaymentFlow and StripePayment
- Prevents stale cached data from showing before fresh fetch

i18n Updates:
- Update 'saved payment method' to 'default saved payment method' across 6 locales

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -1264,7 +1264,7 @@
   },
   "autoTopup": {
     "promptTitle": "Automatische Aufladung aktivieren",
-    "promptDescription": "Nie wieder ohne Daten! Wenn dein Verbrauch 80% erreicht, laden wir automatisch mit {{bundle}} ({{data}}, {{validity}}) über deine gespeicherte Zahlungsmethode nach.",
+    "promptDescription": "Nie wieder ohne Daten! Wenn dein Verbrauch 80% erreicht, laden wir automatisch mit {{bundle}} ({{data}}, {{validity}}) über deine gespeicherte Standard-Zahlungsmethode nach.",
     "enableButton": "Automatische Aufladung aktivieren",
     "enabling": "Wird aktiviert…",
     "enabledSuccess": "Automatische Aufladung wurde aktiviert!",
