--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -1289,7 +1289,7 @@
   },
   "autoTopup": {
     "promptTitle": "ऑटो टॉप-अप सक्षम करें",
-    "promptDescription": "कभी डेटा खत्म न होने दें! जब आपकी खपत 80% तक पहुँचती है, तो हम आपकी सहेजी गई भुगतान विधि का उपयोग करके स्वचालित रूप से {{bundle}} ({{data}}, {{validity}}) से रिचार्ज करेंगे।",
+    "promptDescription": "कभी डेटा खत्म न होने दें! जब आपकी खपत 80% तक पहुँचती है, तो हम आपकी डिफ़ॉल्ट सहेजी गई भुगतान विधि का उपयोग करके स्वचालित रूप से {{bundle}} ({{data}}, {{validity}}) से रिचार्ज करेंगे।",
     "enableButton": "ऑटो टॉप-अप सक्षम करें",
     "enabling": "सक्षम किया जा रहा है…",
     "enabledSuccess": "ऑटो टॉप-अप सक्षम हो गया!",
