feat: replace flag icons with eSIM type icons, add order type labels, UI fixes
- EsimCard: replace bundle flag with esim.png, add chevron toggle on expand
- OrderCard: replace flag with order-type icon, add type label (text above bundle name on desktop, bottom row on mobile)
- OrderCard: responsive layout fixes for mobile (price + type in last row)
- Add esim, esimTopUp, esimAutoTopUp images to public/media
- Add order type locale keys (6 languages)
- Add KeyboardArrowUp icon toggle for details expand/collapse

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -120,6 +120,9 @@
     "email": "E-Mail",
     "orderId": "Bestellnummer",
     "orderType": "Bestelltyp",
+    "orderTypeNewEsim": "Neue eSIM",
+    "orderTypeTopup": "Aufladung",
+    "orderTypeAutoTopup": "Auto-Aufladung",
     "Primary Bundle": "Haupttarif",
     "TopUp Bundle": "Auflade-Tarif",
     "labelRequired": "Name ist erforderlich",
