--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -120,6 +120,9 @@
     "email": "Email",
     "orderId": "Order ID",
     "orderType": "Order Type",
+    "orderTypeNewEsim": "New eSIM",
+    "orderTypeTopup": "Top Up",
+    "orderTypeAutoTopup": "Auto Top-Up",
     "Primary Bundle": "Primary Bundle",
     "TopUp Bundle": "TopUp Bundle",
     "labelRequired": "Label is a required field",
