--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -120,6 +120,9 @@
     "email": "Email",
     "orderId": "ID del Pedido",
     "orderType": "Tipo de Pedido",
+    "orderTypeNewEsim": "Nueva eSIM",
+    "orderTypeTopup": "Recarga",
+    "orderTypeAutoTopup": "Recarga automática",
     "Primary Bundle": "Plan Principal",
     "TopUp Bundle": "Plan de Recarga",
     "labelRequired": "La etiqueta es obligatoria",
