--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -120,6 +120,9 @@
     "email": "Email",
     "orderId": "ID de Commande",
     "orderType": "Type de Commande",
+    "orderTypeNewEsim": "Nouvelle eSIM",
+    "orderTypeTopup": "Recharge",
+    "orderTypeAutoTopup": "Recharge auto",
     "Primary Bundle": "Forfait Principal",
     "TopUp Bundle": "Forfait de Recharge",
     "labelRequired": "Le libellé est requis",
