--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -120,6 +120,9 @@
     "email": "ईमेल",
     "orderId": "ऑर्डर ID",
     "orderType": "ऑर्डर प्रकार",
+    "orderTypeNewEsim": "नई eSIM",
+    "orderTypeTopup": "टॉप अप",
+    "orderTypeAutoTopup": "ऑटो टॉप-अप",
     "Primary Bundle": "प्राथमिक बंडल",
     "TopUp Bundle": "टॉप-अप बंडल",
     "labelRequired": "नाम आवश्यक है",
