--- a/public/locales/ro/translation.json
+++ b/public/locales/ro/translation.json
@@ -120,6 +120,9 @@
     "email": "Adresa de e-mail",
     "orderId": "ID comandă",
     "orderType": "Tip comandă",
+    "orderTypeNewEsim": "eSIM nouă",
+    "orderTypeTopup": "Reîncărcare",
+    "orderTypeAutoTopup": "Reîncărcare automată",
     "Primary Bundle": "Pachet principal",
     "TopUp Bundle": "Reîncărcare pachet",
     "labelRequired": "Câmpul „Etichetă” este obligatoriu",
