feat: add DownloadAppSection to homepage and plans/land page
- Create DownloadAppSection component (full-bleed, reuses DownloadButton smart redirect)
- Insert section between HowItWorks and Benefits on homepage
- Add section to PlansWrapper outside padded container for full-width display
- Add home.downloadApp translation keys to all 6 locales (en, de, es, fr, hi, ro)

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -1167,6 +1167,10 @@
         "description": "Aktivieren Sie Ihre eSIM bei Ankunft und genießen Sie nahtlose Konnektivität"
       }
     },
+    "downloadApp": {
+      "title": "Holen Sie Sich die ChillSim App",
+      "subtitle": "Verwalten Sie Ihre eSIMs unterwegs. Laden Sie unsere kostenlose App für das beste Erlebnis herunter."
+    },
     "benefits": {
       "title": "Warum Unsere eSIM Wählen?",
       "subtitle": "Erleben Sie problemlose Konnektivität, wohin Sie auch reisen",
