--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1199,6 +1199,10 @@
         "description": "Activate your eSIM when you arrive and enjoy seamless connectivity"
       }
     },
+    "downloadApp": {
+      "title": "Get the ChillSim App",
+      "subtitle": "Manage your eSIMs on the go. Download our free app for the best experience."
+    },
     "benefits": {
       "title": "Why Choose Our eSIM?",
       "subtitle": "Experience hassle-free connectivity wherever you travel",
