--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -1192,6 +1192,10 @@
         "description": "पहुँचने पर अपना eSIM सक्रिय करें और सीमलेस कनेक्टिविटी का आनंद लें"
       }
     },
+    "downloadApp": {
+      "title": "ChillSim ऐप डाउनलोड करें",
+      "subtitle": "चलते-फिरते अपने eSIM प्रबंधित करें। सर्वोत्तम अनुभव के लिए हमारा मुफ़्त ऐप डाउनलोड करें।"
+    },
     "benefits": {
       "title": "हमारा eSIM क्यों चुनें?",
       "subtitle": "जहाँ भी यात्रा करें, बिना परेशानी कनेक्टिविटी का अनुभव करें",
