--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -1192,6 +1192,10 @@
         "description": "Activez votre eSIM à votre arrivée et profitez d'une connectivité sans faille"
       }
     },
+    "downloadApp": {
+      "title": "Téléchargez l'App ChillSim",
+      "subtitle": "Gérez vos eSIMs où que vous soyez. Téléchargez notre application gratuite pour la meilleure expérience."
+    },
     "benefits": {
       "title": "Pourquoi Choisir Notre eSIM ?",
       "subtitle": "Profitez d'une connectivité sans souci où que vous voyagiez",
