feat: download app CTA, hero mobile positioning, footer improvements
## New Features
- Added 'Download App' glassmorphism pill button below TravelSearchWidget in homepage hero
  - Smart UA detection: Android  Play Store, iOS  App Store, desktop  chillsim.net/download
  - Apple + Google Play SVG icons inline
  - Added home.downloadApp.button translation key to all 6 locales (EN: 'Download App', DE: 'Herunterladen', ES: 'Descargar', FR: 'Télécharger', HI: 'डउनलड कर', RO: 'Descarcă')
- Added new googlePlay.svg to public/media/

## Hero Background
- Hero images now support per-image mobile background-position
  - Converted heroBackgrounds array from strings to objects with src + mobilePosition
  - Added useMediaQuery to apply mobile-specific focal point shift
  - home_shutterstock_424964827.jpg set to 70% center on mobile

## Footer
- Footer bottom links now stack vertically on mobile (flex-col on mobile, flex-row on md+)
- RO locale ANPC images: both now use w-40 for consistent equal width
- Added ANAT logo (anat.png) to RO footer alongside existing ANPC SAL and SOL images
- Updated ANPC image files (anpc-sal.png, anpc-sol.png) with new versions

## Bug Fixes
- SmartAppBanner: DEV_MODE_FORCE_SHOW reset to false (was accidentally left true)
- TravelSearchWidget search header: centered with justify-center
- Updated media assets: esim.png, esimAutoTopUp.png, esimTopUp.png refreshed

--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -1169,7 +1169,8 @@
     },
     "downloadApp": {
       "title": "Holen Sie Sich die ChillSim App",
-      "subtitle": "Verwalten Sie Ihre eSIMs unterwegs. Laden Sie unsere kostenlose App für das beste Erlebnis herunter."
+      "subtitle": "Verwalten Sie Ihre eSIMs unterwegs. Laden Sie unsere kostenlose App für das beste Erlebnis herunter.",
+      "button": "Herunterladen"
     },
     "benefits": {
       "title": "Warum Unsere eSIM Wählen?",
