--- a/public/locales/hi/translation.json
+++ b/public/locales/hi/translation.json
@@ -1194,7 +1194,8 @@
     },
     "downloadApp": {
       "title": "ChillSim ऐप डाउनलोड करें",
-      "subtitle": "चलते-फिरते अपने eSIM प्रबंधित करें। सर्वोत्तम अनुभव के लिए हमारा मुफ़्त ऐप डाउनलोड करें।"
+      "subtitle": "चलते-फिरते अपने eSIM प्रबंधित करें। सर्वोत्तम अनुभव के लिए हमारा मुफ़्त ऐप डाउनलोड करें।",
+      "button": "डाउनलोड करें"
     },
     "benefits": {
       "title": "हमारा eSIM क्यों चुनें?",
